--- a/docker/Dockerfiles/Dockerfile-hpsdr
+++ b/docker/Dockerfiles/Dockerfile-hpsdr
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-base:$ARCHTAG
+FROM openwebrxplus-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-hpsdr.sh /
 
