--- a/docker/Dockerfiles/Dockerfile-radioberry
+++ b/docker/Dockerfiles/Dockerfile-radioberry
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-soapysdr-base:$ARCHTAG
+FROM openwebrxplus-soapysdr-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-radioberry.sh /
 RUN /install-dependencies-radioberry.sh &&\
