--- a/docker/Dockerfiles/Dockerfile-rtlsdr-soapy
+++ b/docker/Dockerfiles/Dockerfile-rtlsdr-soapy
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-soapysdr-base:$ARCHTAG
+FROM openwebrxplus-soapysdr-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-rtlsdr-soapy.sh /
 RUN /install-dependencies-rtlsdr-soapy.sh &&\
