--- a/docker/Dockerfiles/Dockerfile-runds
+++ b/docker/Dockerfiles/Dockerfile-runds
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-base:$ARCHTAG
+FROM openwebrxplus-base:$ARCHTAG
 
 COPY docker/scripts/install-connectors.sh \
      docker/scripts/install-dependencies-runds.sh /
