--- a/docker/Dockerfiles/Dockerfile-sdrplay
+++ b/docker/Dockerfiles/Dockerfile-sdrplay
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-soapysdr-base:$ARCHTAG
+FROM openwebrxplus-soapysdr-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-sdrplay.sh \
      docker/files/sdrplay/install-lib.*.patch /
