--- a/docker/Dockerfiles/Dockerfile-soapyremote
+++ b/docker/Dockerfiles/Dockerfile-soapyremote
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-soapysdr-base:$ARCHTAG
+FROM openwebrxplus-soapysdr-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-soapyremote.sh /
 RUN /install-dependencies-soapyremote.sh &&\
