--- a/docker/Dockerfiles/Dockerfile-soapysdr
+++ b/docker/Dockerfiles/Dockerfile-soapysdr
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-base:$ARCHTAG
+FROM openwebrxplus-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-soapysdr.sh \
      docker/scripts/install-connectors.sh /
