--- a/docker/Dockerfiles/Dockerfile-uhd
+++ b/docker/Dockerfiles/Dockerfile-uhd
@@ -1,5 +1,5 @@
 ARG ARCHTAG
-FROM openwebrx-soapysdr-base:$ARCHTAG
+FROM openwebrxplus-soapysdr-base:$ARCHTAG
 
 COPY docker/scripts/install-dependencies-uhd.sh /
 RUN /install-dependencies-uhd.sh &&\
